<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">pro.buzap.by</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="list_of_manufacturers">List Of Manufactures</string>
    <string name="service_error">Service Error</string>
    <string name="unexpected_error">Error</string>
    <string name="form_validation_error">Error</string>
    <string name="all">-All-</string>
    <string name="order_offers">Offers</string>
    <string name="order_details">Details</string>
    <string name="order_makeoffer">Make Offer</string>
    <string name="login_success">Success</string>
    <string name="registration_success">Success</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="need_restart">This action requires application restart</string>
    <string name="are_you_sure">Are you sure want to restart it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_orders">No orders</string>
    <string name="no_offers">No offers</string>
    <string name="total">Total</string>
    <string name="manufacturer">Manufacturer</string>

    <string name="orders">Orders</string>
    <string name="myOfferOrders">My Offers</string>
    <string name="favoriteOrders">Bookmarks</string>

    <string name="order_details">Order Details</string>

    <string name="remove_from_bookmarks">Remove from Bookmarks</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>

    <string name="profile_name">Name</string>
    <string name="profile_balance">Balance</string>
    <string name="profile_language">Language</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>

    <string name="email_error">Please enter valid email</string>
    <string name="password_empty_error">Please enter password</string>
    <string name="name_empty_error">Please enter name</string>

    <string name="need_authentication">Please log in</string>

    <string name="make_offer">Make Offer</string>
    <string name="make_offer_success">Offer has been added successfully</string>
    <string name="make_offer_price_error">Please enter valid price</string>

    <string name="photos">Photos</string>
    <string name="no_photos">-none-</string>

    <string name="choose_organization">Choose Organization Type</string>
    <integer-array name="organization_type_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>
    <string-array name="organization_type_strings">
        <item>Private</item>
        <item>OOO</item>
        <item>IP</item>
    </string-array>

    <string-array name="language_ids">
        <item>en</item>
        <item>be</item>
        <item>ru</item>
    </string-array>
    <string-array name="language_strings">
        <item>English</item>
        <item>Belarusian</item>
        <item>Russian</item>
    </string-array>

    <string name="price">Price (USD)</string>

    <string name="choose_availability">Choose Availability</string>
    <integer-array name="availability_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>
    <string-array name="availability_strings">
        <item>None</item>
        <item>Now</item>
        <item>1–3 days</item>
        <item>4–7 days</item>
        <item>7+ days</item>
    </string-array>

    <string name="choose_warranty">Choose Warranty</string>
    <integer-array name="warranty_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>
    <string-array name="warranty_strings">
        <item>None</item>
        <item>No</item>
        <item>3 days</item>
        <item>7 days</item>
        <item>Other</item>
    </string-array>

    <string name="choose_delivery">Choose Delivery</string>
    <integer-array name="delivery_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>
    <string-array name="delivery_strings">
        <item>None</item>
        <item>No</item>
        <item>Possible</item>
        <item>Free</item>
        <item>Paid</item>
    </string-array>

    <string name="choose_condition">Choose Condition</string>
    <integer-array name="condition_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
    <string-array name="condition_strings">
        <item>None</item>
        <item>Very Bad</item>
        <item>Bad</item>
        <item>Normal</item>
        <item>Good</item>
        <item>Mint</item>
    </string-array>

    <string name="availability">availability</string>
    <string name="condition">condition</string>
    <string name="delivery">delivery</string>
    <string name="warranty">warranty</string>

    <string name="select_picture">Select picture</string>
    <string name="remove_image">Remove</string>

    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>

    <string name="please_login">Please sign in. If you dont have an account please sing up</string>

    <string name="car_count">Cars</string>
    <string name="offer_count">Offers</string>


</resources>

