<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:local="http://schemas.android.com/apk/res-auto"
        >
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/refresh"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_filter"
          android:icon="@drawable/ic_action_search"
          android:title="@string/filter"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_login"
          android:icon="@drawable/ic_action_login"
          android:title="@string/login"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_registration"
          android:icon="@drawable/ic_action_add_person"
          android:title="@string/registration"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/profile"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_action_logout"
          android:title="@string/logout"
          local:showAsAction="withText|always"
            />
</menu>