<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <EditText android:id="@+id/editUsername"
              android:hint="@string/username"
              android:inputType="textEmailAddress"
              style="@style/formControl"
            />
    <EditText android:id="@+id/editPassword"
              android:inputType="textPassword"
              android:hint="@string/password"
              style="@style/formControl"
            />
    <EditText android:id="@+id/editName"
              android:inputType="textPersonName"
              android:hint="@string/name"
              style="@style/formControl"
            />
    <EditText android:id="@+id/editPhone"
              android:inputType="phone"
              android:hint="@string/phone"
              style="@style/formControl"
            />

    <Spinner
            android:id="@+id/spinnerOrganizationType"
            android:entries="@array/organization_type_strings"
            android:prompt="@string/choose_organization"
            style="@style/formControl"
            />

    <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/ok"-->
            <!--android:id="@+id/buttonRegistration"-->
            <!--android:layout_gravity="left|center_vertical"-->
            <!--android:onClick="onSubmitClick"-->
            <!--android:singleLine="true"/>-->
</LinearLayout>