<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:local="http://schemas.android.com/apk/res-auto"
        >
    <item android:id="@+id/action_registration"
          android:icon="@drawable/ic_action_add_person"
          android:title="@string/registration"
          local:showAsAction="withText|ifRoom"
            />
    <item android:id="@+id/action_ok"
          android:icon="@drawable/ic_action_accept"
          android:title="@string/ok"
          local:showAsAction="withText|always"
            />
    <item android:id="@+id/action_cancel"
          android:icon="@drawable/ic_action_cancel"
          android:title="@string/cancel"
          local:showAsAction="withText|always"
            />
</menu>